-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
Fully Compatible
-
ALL
-
Execution Team 2021-05-03
-
None
-
None
-
None
-
None
-
None
-
None
-
None
Uninitialized pointer field
The pointer field will point to an arbitrary memory location, any attempt to write may cause corruption. A pointer field is not initialized in the constructor
/src/mongo/db/timeseries/bucket_catalog.h:283: UNINIT_CTOR 118023 The compiler-generated constructor for this class does not initialize "_comparator".