SERVER-55728 Initialize _comparator to nullptr in BucketCatalog